# uvsqltool

./: .gitignore  Dockerfile  PROMPT_TEMPLATE.md  README.md  mcp.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  release.yml
Data/Mapping/: ItemCivicDictionary.csv
Data/Samples/: Items_cvic.txt
Templates/: MCP_COOKBOOK.md
Training/: README.md  mcp.json
Training/Scripts/: Setup-Training-Environment.ps1  Validate-Environment.ps1
scripts/: setup-publish.ps1  setup-publish.sh
src/uv_sql_tool/: __init__.py  __main__.py  cli.py  config.py  schema_generator.py  server.py  tools.py
